--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
   },
   "config": {
     "pre-git": {
-      "pre-commit": [
-        "yarn docs:build",
-        "git add docs/.vuepress/dist"
-      ]
+      "pre-commit": []
     }
   }
 }
