📝 finishing touches on deploy scripts

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "config": {
     "pre-git": {
-      "pre-commit": [
+      "pre-push": [
         "chmod +x ./deploy.sh",
         "./deploy.sh"
       ]
