--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "atleticopixel.com",
+  "version": "1.0.0",
+  "description": "Atletico Pixel games",
+  "author": "ederchrono <ederchrono@gmail.com>",
   "devDependencies": {
     "pre-git": "^3.17.1",
     "vuepress": "^0.8.4"
